update jamm, update ohc, change test and exec JVM options, fix sun.misc.Cleaner vs. jdk.internal.ref.Cleaner, add JVM args to run config for generate-idea-files
test cluster stuff

changes to moved RMIExporter interface