@@ -121,41 +121,18 @@ case "$jvm" in
         ;;
 esac
 
-readJvmOps()
-{
-    # Read user-defined JVM options from jvm.options file
-    JVM_OPTS_FILE=$CASSANDRA_CONF/$1
-    for opt in `grep "^-" $JVM_OPTS_FILE`
-    do
-      JVM_OPTS="$JVM_OPTS $opt"
-    done
-}
-
 #GC log path has to be defined here because it needs to access CASSANDRA_HOME
-if [ "$JVM_VERSION" \> "1.8.9" ] ; then
-    # Java 9+
-    # See description of https://bugs.openjdk.java.net/browse/JDK-8046148 for details about the syntax
-    # The following is the equivalent to -XX:+PrintGCDetails -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=10M
-    if ! grep -q "^-Xlog:gc" $CASSANDRA_CONF/jvm9.options ; then
-        # only add -Xlog:gc if it's not mentioned in jvm9.options file
-        mkdir -p ${CASSANDRA_HOME}/logs
-        JVM_OPTS="$JVM_OPTS -Xlog:gc=info,heap=trace,age=debug,safepoint=info,promotion=trace:file=${CASSANDRA_HOME}/logs/gc.log:time,uptime,pid,tid,level:filecount=10,filesize=10240"
-    fi
-    readJvmOps "jvm9.options"
-else
-    # Java 8
-    if ! grep -q "^-Xloggc" $CASSANDRA_CONF/jvm8.options ; then
-        # only add -Xlog:gc if it's not mentioned in jvm9.options file
-        JVM_OPTS="$JVM_OPTS -Xloggc:${CASSANDRA_HOME}/logs/gc.log"
-    fi
-    readJvmOps "jvm8.options"
-fi
+JVM_OPTS="$JVM_OPTS -Xloggc:${CASSANDRA_HOME}/logs/gc.log"
 
 # Here we create the arguments that will get passed to the jvm when
 # starting cassandra.
 
 # Read user-defined JVM options from jvm.options file
-readJvmOps "jvm.options"
+JVM_OPTS_FILE=$CASSANDRA_CONF/jvm.options
+for opt in `grep "^-" $JVM_OPTS_FILE`
+do
+  JVM_OPTS="$JVM_OPTS $opt"
+done
 
 # Check what parameters were defined on jvm.options file to avoid conflicts
 echo $JVM_OPTS | grep -q Xmn
@@ -230,7 +207,7 @@ fi
 JVM_OPTS="$JVM_OPTS -XX:CompileCommandFile=$CASSANDRA_CONF/hotspot_compiler"
 
 # add the jamm javaagent
-JVM_OPTS="$JVM_OPTS -javaagent:$CASSANDRA_HOME/lib/jamm-0.3.2-SNAPSHOT.jar"
+JVM_OPTS="$JVM_OPTS -javaagent:$CASSANDRA_HOME/lib/jamm-0.3.0.jar"
 
 # set jvm HeapDumpPath with CASSANDRA_HEAPDUMP_DIR
 if [ "x$CASSANDRA_HEAPDUMP_DIR" != "x" ]; then
@@ -251,6 +228,7 @@ fi
 # To enable remote JMX connections, uncomment lines below
 # with authentication and/or ssl enabled. See https://wiki.apache.org/cassandra/JmxSecurity 
 #
+LOCAL_JMX=no
 if [ "x$LOCAL_JMX" = "x" ]; then
     LOCAL_JMX=yes
 fi
@@ -267,7 +245,7 @@ else
   JVM_OPTS="$JVM_OPTS -Dcassandra.jmx.remote.port=$JMX_PORT"
   # if ssl is enabled the same port cannot be used for both jmx and rmi so either
   # pick another value for this property or comment out to use a random port (though see CASSANDRA-7087 for origins)
-  JVM_OPTS="$JVM_OPTS -Dcom.sun.management.jmxremote.rmi.port=$JMX_PORT"
+  #JVM_OPTS="$JVM_OPTS -Dcom.sun.management.jmxremote.rmi.port=$JMX_PORT"
 
   # turn on JMX authentication. See below for further options
   JVM_OPTS="$JVM_OPTS -Dcom.sun.management.jmxremote.authenticate=true"
@@ -312,14 +290,6 @@ JVM_OPTS="$JVM_OPTS -Dcom.sun.management.jmxremote.password.file=/etc/cassandra/
 # for SIGAR we have to set the java.library.path
 # to the location of the native libraries.
 JVM_OPTS="$JVM_OPTS -Djava.library.path=$CASSANDRA_HOME/lib/sigar-bin"
-
-# APOLLO-342: we need to expose the available system memory so that the
-# MemoryOnlyStrategy can do proper fraction calculations.
-# See max_memory_to_lock_fraction setting in cassandra.yaml for details.
-JVM_OPTS="$JVM_OPTS -Dsystem_memory_in_mb=$system_memory_in_mb"
-
-# Disable Agrona bounds check for extra performance
-JVM_OPTS="$JVM_OPTS -Dagrona.disable.bounds.checks=TRUE"
 
 JVM_OPTS="$JVM_OPTS $MX4J_ADDRESS"
 JVM_OPTS="$JVM_OPTS $MX4J_PORT"
